--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,9 @@ body {
   background-color: rgba(255, 255, 255, 0.9);
 }
 
-.data-equals {
+.equals {
   width: 300px;
+  background-color: blue;
 }
 
 .output {
